remove unused imports and methods